--- a/css/layout.css
+++ b/css/layout.css
@@ -50,6 +50,13 @@ h4
 	background-color: #eee;
 }
 
+q
+{
+	display: block;
+	font-size: 0.8em;
+	font-weight: bold;
+}
+
 /***************************************************
  * Header
  **************************************************/
