--- a/css/layout.css
+++ b/css/layout.css
@@ -26,7 +26,7 @@ body
 
 h1
 {
-	font-size: 64px;
+	font-size: 48px;
 	margin: 0px;
 }
 
@@ -55,6 +55,13 @@ q
 	display: block;
 	font-size: 0.8em;
 	font-weight: bold;
+}
+
+.section,
+.subSection,
+.superSubSection
+{
+	display: none;
 }
 
 /***************************************************
