--- a/css/layout.css
+++ b/css/layout.css
@@ -14,6 +14,17 @@ a:hover
 	color: #0e8;
 }
 
+a h5
+{
+	background-color: #08e;
+	color: black;
+}
+
+a h5:hover
+{
+	background-color: #0e8;
+}
+
 body
 {
 	color: #666;
