Added Red Fox and put more info in Rush Digital.

--- a/me.css
+++ b/me.css
@@ -97,11 +97,13 @@ iframe
 	display: none;
 }
 
+.redfox.projects .segment,
 .rush.projects .segment
 {
 	display: none;
 }
 
+.redfox.projects .segment img,
 .rush.projects .segment img
 {
 	max-width: 100%;
